// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utilities: JavascriptDocs renders init and close methods 1`] = `
<JavascriptDocs
  close={true}
  componentName="test"
>
  <p>
    <PxScript
      component="test"
      func="init"
    >
      <code>
        <span>
          px
        </span>
        <span
          className="token punctuation"
        >
          .
        </span>
        <span>
          test
        </span>
        <span
          className="token punctuation"
        >
          .
        </span>
        <span
          className="token function"
        >
          init
        </span>
        <span
          className="token punctuation"
        >
          (
        </span>
        <span
          className="token punctuation"
        >
          );
        </span>
      </code>
    </PxScript>
  </p>
  <p>
    <Link
      to="/docs/getting-started/javascript"
    />
     
    test
    .
  </p>
  <CloseDocs
    componentName="test"
  >
    <p>
      <PxScript
        component="test"
        func="close"
        params={
          Array [
            "<test-id>",
          ]
        }
      >
        <code>
          <span>
            px
          </span>
          <span
            className="token punctuation"
          >
            .
          </span>
          <span>
            test
          </span>
          <span
            className="token punctuation"
          >
            .
          </span>
          <span
            className="token function"
          >
            close
          </span>
          <span
            className="token punctuation"
          >
            (
          </span>
          <span
            className={null}
            key="0"
          >
            &lt;test-id&gt;
          </span>
          <span
            className="token punctuation"
          >
            );
          </span>
        </code>
      </PxScript>
    </p>
    <p>
      Closes the given 
      test
      .
    </p>
  </CloseDocs>
</JavascriptDocs>
`;

exports[`Utilities: JavascriptDocs renders init and open methods 1`] = `
<JavascriptDocs
  componentName="test"
  open={true}
>
  <p>
    <PxScript
      component="test"
      func="init"
    >
      <code>
        <span>
          px
        </span>
        <span
          className="token punctuation"
        >
          .
        </span>
        <span>
          test
        </span>
        <span
          className="token punctuation"
        >
          .
        </span>
        <span
          className="token function"
        >
          init
        </span>
        <span
          className="token punctuation"
        >
          (
        </span>
        <span
          className="token punctuation"
        >
          );
        </span>
      </code>
    </PxScript>
  </p>
  <p>
    <Link
      to="/docs/getting-started/javascript"
    />
     
    test
    .
  </p>
  <OpenDocs
    componentName="test"
  >
    <p>
      <PxScript
        component="test"
        func="open"
        params={
          Array [
            "<test-id>",
          ]
        }
      >
        <code>
          <span>
            px
          </span>
          <span
            className="token punctuation"
          >
            .
          </span>
          <span>
            test
          </span>
          <span
            className="token punctuation"
          >
            .
          </span>
          <span
            className="token function"
          >
            open
          </span>
          <span
            className="token punctuation"
          >
            (
          </span>
          <span
            className={null}
            key="0"
          >
            &lt;test-id&gt;
          </span>
          <span
            className="token punctuation"
          >
            );
          </span>
        </code>
      </PxScript>
    </p>
    <p>
      Opens the given 
      test
      .
    </p>
  </OpenDocs>
</JavascriptDocs>
`;

exports[`Utilities: JavascriptDocs renders init, open and close methods 1`] = `
<JavascriptDocs
  close={true}
  componentName="test"
  open={true}
>
  <p>
    <PxScript
      component="test"
      func="init"
    >
      <code>
        <span>
          px
        </span>
        <span
          className="token punctuation"
        >
          .
        </span>
        <span>
          test
        </span>
        <span
          className="token punctuation"
        >
          .
        </span>
        <span
          className="token function"
        >
          init
        </span>
        <span
          className="token punctuation"
        >
          (
        </span>
        <span
          className="token punctuation"
        >
          );
        </span>
      </code>
    </PxScript>
  </p>
  <p>
    <Link
      to="/docs/getting-started/javascript"
    />
     
    test
    .
  </p>
  <OpenDocs
    componentName="test"
  >
    <p>
      <PxScript
        component="test"
        func="open"
        params={
          Array [
            "<test-id>",
          ]
        }
      >
        <code>
          <span>
            px
          </span>
          <span
            className="token punctuation"
          >
            .
          </span>
          <span>
            test
          </span>
          <span
            className="token punctuation"
          >
            .
          </span>
          <span
            className="token function"
          >
            open
          </span>
          <span
            className="token punctuation"
          >
            (
          </span>
          <span
            className={null}
            key="0"
          >
            &lt;test-id&gt;
          </span>
          <span
            className="token punctuation"
          >
            );
          </span>
        </code>
      </PxScript>
    </p>
    <p>
      Opens the given 
      test
      .
    </p>
  </OpenDocs>
  <CloseDocs
    componentName="test"
  >
    <p>
      <PxScript
        component="test"
        func="close"
        params={
          Array [
            "<test-id>",
          ]
        }
      >
        <code>
          <span>
            px
          </span>
          <span
            className="token punctuation"
          >
            .
          </span>
          <span>
            test
          </span>
          <span
            className="token punctuation"
          >
            .
          </span>
          <span
            className="token function"
          >
            close
          </span>
          <span
            className="token punctuation"
          >
            (
          </span>
          <span
            className={null}
            key="0"
          >
            &lt;test-id&gt;
          </span>
          <span
            className="token punctuation"
          >
            );
          </span>
        </code>
      </PxScript>
    </p>
    <p>
      Closes the given 
      test
      .
    </p>
  </CloseDocs>
</JavascriptDocs>
`;

exports[`Utilities: JavascriptDocs renders only init method 1`] = `
<Fragment>
  <p>
    <PxScript
      component="test"
      func="init"
    />
  </p>
  <p>
    <Link
      to="/docs/getting-started/javascript"
    >
      Initializes
    </Link>
     
    test
    .
  </p>
</Fragment>
`;
